# calibre-web-automated-book-downloader

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  app.py  backend.py  book_manager.py  cloudflare_bypasser.py  cloudflare_bypasser_external.py  config.py  docker-compose.dev.yml  docker-compose.extbp.dev.yml  docker-compose.extbp.yml  docker-compose.test-clients.yml  docker-compose.tor.dev.yml  docker-compose.tor.yml  docker-compose.yml  downloader.py  entrypoint.sh  env.py  genDebug.sh  logger.py  models.py  network.py  pyproject.toml  readme.md  requirements-base.txt  requirements.txt  tor.sh  websocket_manager.py
.github/workflows/: build-and-publish-docker-image.yml
calibre-web-automated-downloader/: .gitignore  .pre-commit-config.yaml   .typos.toml  Cargo.toml
calibre-web-automated-downloader/src/: config.rs  main.rs  network.rs
cwa_book_downloader/: __init__.py  __main__.py  main.py
cwa_book_downloader/api/: websocket.py
cwa_book_downloader/bypass/: __init__.py  external_bypasser.py  fingerprint.py  internal_bypasser.py
cwa_book_downloader/config/: env.py  security.py  settings.py
cwa_book_downloader/core/: __init__.py  cache.py  config.py  image_cache.py  logger.py  models.py  naming.py  queue.py  settings_registry.py  utils.py
cwa_book_downloader/download/: archive.py  fs.py  http.py  (+2 more)
docs/: plugin-settings.md  release-sources-plugin-guide.md  url-search-parameters.md
scripts/: test_clients.py
src/: README.md
templates/: auth.html  index.html  new_index.html
testing/: E2E_test.py
tests/: README.md  conftest.py
(+130 files in other folders)
