[package]
name = "calibre-web-automated-downloader"
version = "0.1.0"
edition = "2021"
authors = ["Mustafa Soylu <mohkargan@gmail.com", "Siddik Acil <sddk.acil@gmail.com>"]
description = "Rust implementation of calibre-automated-web-downloader."
license = "MIT"
keywords = ['calibre', 'automation', 'e-book']
rust-version = "1.83.0"
categories = ["web-programming"]
repository = "https://github.com/Oda-kankileri-github-edition/calibre-web-automated-book-downloader"

[dependencies]
dotenv = "0.15.0"
directories = "5.0.1"
once_cell = "1.20.2"